# onFire

./: .env.local.example  .gitignore  Makefile  pyproject.toml  test.py
docker/: Dockerfile  (+1 more)
rust-copytrader/: ACCOUNT_MONITOR.md  ACCOUNT_SWEEPER.md  COPYTRADE_LATENCY.md  Cargo.toml  README.md  monitor_v1_explained.md  monitor_v2.md  monitor_v2_struct.md  position_struct_v1.md  position_v1.md  wallet_filter_metrics_explained.md  wallet_filter_v1.md
rust-copytrader/src/: app.rs  config.rs  lib.rs  main.rs  wallet_filter.rs
rust-copytrader/src/adapters/: activity.rs  auth.rs  http_submit.rs  market_ws.rs  mod.rs  order_api.rs  positions.rs  signing.rs  submit_pipeline.rs  transport.rs  verification.rs
rust-copytrader/src/cache/: freshness.rs  leader_state.rs  market_cache.rs  mod.rs
rust-copytrader/src/domain/: budget.rs  events.rs  mod.rs  position_targeting.rs
rust-copytrader/src/execution/: mod.rs  pre_trade_gate.rs  router.rs  state_machine.rs
rust-copytrader/src/monitor/: alert.rs  event.rs  hist.rs  http.rs  journal.rs  mod.rs  rolling.rs  screen.rs  snapshot.rs  state.rs
rust-copytrader/tests/: activity_adapter.rs  auth_router.rs  bootstrap_mode.rs  cache_state.rs  e2e_replay.rs  hot_path_budget.rs  http_submit_contract.rs  http_submit_executor.rs  orchestrator.rs  perf_budget.rs  pre_trade_gate.rs  reconciliation_and_market_ws.rs  runtime_session.rs  session_persistence.rs  signing_contract.rs  snapshots.rs  submit_pipeline.rs  telemetry_latency.rs  transport_boundaries.rs  transport_runtime.rs  verification_adapter.rs  verification_state.rs
(+448 files in other folders)
